# senluo

./: .gitignore  CMakeLists.txt  LICENSE.txt  code_generate.py
benchmark/: benchmark_tool.hpp  mat_mul.cpp  mat_mul_input.txt
build_benchmark/: static.cpp
compile_time_benchmark/: tuple_zip_transform.cpp
include/senluo/: adaptor.hpp  array.hpp  astrict.hpp  complex.hpp  constant.hpp  core.hpp  enumerate.hpp  general.hpp  geo.hpp  interval.hpp  macro_define.hpp  make.hpp  mat.hpp  math.hpp  operate.hpp  pretreat.hpp  principle.hpp  rect.hpp  relayout.hpp  standard.hpp  standard_interface.hpp  tensor.hpp  tree.hpp  tuple.hpp  vec.hpp  wrap.hpp
include/senluo/code_generate/: aggregate_getter_invoker.code  code_generate.py  tuple_specialization.code  vec_access.code  vec_access.py
include/senluo/core/: astrict.hpp  external_freeze.hpp  make.hpp  operate.hpp  pretreat.hpp  pretreat0.hpp  principle.hpp  relayout.hpp  shared_state_freeze.hpp  structured_adapt  subtree.hpp  subview.hpp  tag.hpp  transform.hpp  tree.hpp  tree_adaptor.hpp  visit.hpp  wrap.hpp
include/senluo/core_detail/: astrict.hpp  make.hpp  operate.hpp  pretreat.hpp  principle.hpp  relayout.hpp  standard.hpp  subtree.hpp  tag.hpp  wrap.hpp
include/senluo/tools/: adaptor.hpp  array.hpp  constant.hpp  general.hpp  macro_define.hpp  macro_undef.hpp  math.hpp  pipeline.hpp  tuple.hpp  wrapper.hpp
test/: adaptor.cpp  adaptor_closure.cpp  array.cpp  astrict.cpp  enumerate.cpp  external_freeze.cpp  general.cpp  geo.cpp  make.cpp  mat.cpp  math.cpp  operate.cpp  pipeline.cpp  pretreat.cpp  relayout.cpp  shared_state_freeze.cpp  standard.cpp  subtree.cpp  subview.cpp  tag.cpp  tensor.cpp  test_tool.hpp  transform.cpp  tree.cpp  tree_adaptor.cpp  tuple.cpp  vec.cpp  wrap.cpp  wrapper.cpp
test/ignore/: array.cpp  general.cpp  interval.cpp  mat.cpp  operate.cpp  pretreat.cpp  principle.cpp  rect.cpp  relayout.cpp  subtree.cpp  tree.cpp  vec.cpp  wrap.cpp
